# rust_vehicle

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20240509190435_create_init_tables.sql  20240510092604_create_vehicles.sql  20240510092604_move_to_uuid_v7.sql
src/: constants.rs  ctx.rs  database.rs  db.rs  error.rs  io.rs  logging.rs  main.rs  prelude.rs  span.rs
src/config/: environment.rs  mod.rs  multi_purpose_url.rs
src/fallback/: mod.rs
src/health/: constants.rs  mod.rs  router.rs  schemas.rs  services.rs
src/middleware/: mod.rs
src/strings/: de.rs  en.rs  mod.rs
src/utils/: mod.rs
src/vehicles/: mod.rs  router.rs  schemas.rs  services.rs  utils.rs
