[package]
name = "vehicle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
envconfig = "0.10.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time"] }
url = "2.5.0"
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"
list = "0.1.3"

[dev-dependencies]
tempfile = "3.10.1"
